<resources>
    <string name="app_name">Login SignUp App</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="welcome_screen">welcome screen</string>
    <string name="slider_item">slider item</string>
    <string name="search_or_ask_a_question">Search or ask a question..</string>
    <string name="microphone">Microphone</string>
    <string name="gallery">Gallery</string>
    <string name="todo2">TODO</string>
    <string name="delivery">Delivery</string>
    <string name="deliver_to_bandari_hyderabad_500055">Deliver to Bandari - Hyderabad 500055</string>
    <string name="deals">Deals</string>
    <string name="groceries">Groceries</string>
    <string name="prime">Prime</string>
    <string name="mobiles">Mobiles</string>
    <string name="mx_player">MX Player</string>
    <string name="groceriesimage">groceriesimage</string>
    <string name="dealsimage">dealsimage</string>
    <string name="primeimage">primeimage</string>
    <string name="mobilesimage">mobilesimage</string>
    <string name="fashion">Fashion</string>
    <string name="more">More</string>
    <string name="mx_playerimage">mx_playerimage</string>
    <string name="amazon_pay">Amazon Pay</string>
    <string name="amazon_pay_text">amazon_pay_text</string>
    <string name="amazon_pay_text2">amazon_pay_text2</string>
    <string name="send_money">Send Money</string>
    <string name="scanner">scanner</string>
    <string name="scan_any_qr">Scan any QR</string>
    <string name="amazon_pay_text3">amazon_pay_text3</string>
    <string name="recharge">Recharge</string>
    <string name="amazon_pay_text4">amazon_pay_text4</string>
    <string name="recharges">recharges</string>
    <string name="keep_shopping_nfor_mobiles">Keep Shopping \nfor Mobiles</string>
    <string name="spin_amp_win_nflat_100_cashback"><![CDATA[Spin & win \nFlat ₹100 Cashback]]></string>
    <string name="smartwatch_deals_nup_to_500_off">Smartwatch Deals \nUp to ₹500 off</string>
    <string name="deals_on_mobiles_nup_to_40_off">Deals on mobiles \nUp to 40% off</string>
    <string name="up_to_100_off_non_movie_tickets">Up to ₹100 off \non movie tickets</string>
    <string name="top_deals_with_exchange_offers_nupto_60_000">Top Deals with exchange offers \nup to ₹60,000</string>
    <string name="product_image">Product Image</string>
    <string name="_39_off">39% off</string>
    <string name="great_indian_festival">Great Indian Festival</string>
    <string name="_14_999">₹14,999</string>
    <string name="m_r_p_24_499">M.R.P.: ₹24,499</string>
    <string name="samsung_galaxy_m35_5g">Samsung Galaxy M35 5G</string>
    <string name="product_image2">Product Image2</string>
    <string name="_36_off">36% off</string>
    <string name="_59_490">₹59,490</string>
    <string name="m_r_p_92_900">M.R.P.: ₹92,900</string>
    <string name="apple_macbook_air">Apple MacBook Air</string>
    <string name="product_image3">Product Image3</string>
    <string name="_21_off">21% off</string>
    <string name="_21_998">₹21,998</string>
    <string name="m_r_p_27_999">M.R.P.: ₹27,999</string>
    <string name="iqoo_z9s_5g">IQOO Z9s 5G</string>
    <string name="product_image4">Product Image4</string>
    <string name="_15_off">15% off</string>
    <string name="_16_998">₹16,998</string>
    <string name="m_r_p_19_999">M.R.P.: ₹19,999</string>
    <string name="realme_narozo_70">realme NAROZO 70</string>
    <string name="deals_on_daily_needs_up_to_70_off_extra_up_to_200_cashback">Deals on daily needs Up to 70% off | Extra up to ₹200 cashback</string>
    <string name="product_image5">Product Image5</string>
    <string name="up_to_50_off_amazon_fresh">Up to 50% off | Amazon Fresh</string>
    <string name="product_image6">Product Image6</string>
    <string name="up_to_60_off_dry_fruits_amp_nuts"><![CDATA[Up to 60% off | Dry fruits & nuts]]></string>
    <string name="product_image7">Product Image7</string>
    <string name="up_to_50_off_cleaning_amp_house_cleaning"><![CDATA[Up to 50% off | Cleaning & House Cleaning]]></string>
    <string name="product_image8">Product Image8</string>
    <string name="up_to_70_off_baby_care">Up to 70% off | Baby care</string>
    <string name="oneplus_pad_go">OnePlus Pad Go</string>
    <string name="industry_leading_2_4k_neye_care_display">Industry Leading 2.4K \neye care display</string>
    <string name="get_oneplus_folio_case_at_nno_extra_cost_nt_amp_c_apply"><![CDATA[Get OnePlus folio case at \nno extra cost \nT&C Apply]]></string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="homeimg">homeimg</string>
    <string name="person">person</string>
    <string name="you">You</string>
    <string name="moreimg">moreimg</string>
    <string name="cart">cart</string>
    <string name="menuimg">menuimg</string>
    <string name="menu">Menu</string>
    <string name="mobiesimage">mobiesimage</string>
    <string name="fashionimage">fashionimage</string>
    <string name="moreimage">moreimage</string>
    <string name="shop_mobiles">shop mobiles</string>
    <string name="spin_wheel">spin wheel</string>
    <string name="shop_this_mobies">shop this mobies</string>
    <string name="shop_watches">shop watches</string>
    <string name="watch_movie">watch movie</string>
    <string name="phoneimage">phoneimage</string>
    <string name="amazon_pay_image">amazon_pay_image</string>
    <string name="great_indian_festival2">Great Indian Festival</string>
    <string name="great_indian_festival3">Great Indian Festival</string>
    <string name="great_indian_festival4">Great Indian Festival</string>
    <string name="more2">More</string>
    <string name="money">money</string>
    <string name="cart2">Cart</string>

</resources>